--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,9 @@ project ("engine")
 add_subdirectory ("engine")
 add_subdirectory ("lib/googletest")
 add_subdirectory ("lib/imgui-cmake")
+set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "Build your own zlib")
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build package with shared libraries.")
+add_subdirectory ("lib/assimp")
+set(BUILD_XAUDIO_WIN10 ON CACHE BOOL "Build for XAudio 2.9")
+set(BUILD_XAUDIO_WIN8 OFF CACHE BOOL "Build for XAudio 2.8")
+add_subdirectory ("lib/DirectXTK")
