--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "lib/googletest"]
+﻿[submodule "lib/googletest"]
 	path = lib/googletest
 	url = https://github.com/google/googletest.git
 	branch = master
