--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory ("lib/assimp")
 set(BUILD_XAUDIO_WIN10 ON CACHE BOOL "Build for XAudio 2.9")
 set(BUILD_XAUDIO_WIN8 OFF CACHE BOOL "Build for XAudio 2.8")
 add_subdirectory ("lib/DirectXTK")
+add_subdirectory ("lib/freetype")
