--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = lib/DirectXTK
 	url = https://github.com/microsoft/DirectXTK.git
 	branch = master
+[submodule "lib/freetype"]
+	path = lib/freetype
+	url = https://github.com/freetype/freetype.git
+	branch = master
