--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -155,14 +155,14 @@ source_group ("src"                                     FILES ${SOURCES})
 target_link_libraries(${PROJECT_NAME}_lib ${LIBRARIES})
 target_include_directories(${PROJECT_NAME}_lib PUBLIC include)
 
-add_executable (${PROJECT_NAME} WIN32 src/main.cpp)
+add_executable (${PROJECT_NAME} WIN32 src/main.cpp src/DeclareDPIAware.manifest)
 target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_lib)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/engine/src/data/Fonts/ $<TARGET_FILE_DIR:${PROJECT_NAME}>/fonts)
 
 
-add_executable (old_main src/old_main.cpp)
+add_executable (old_main src/old_main.cpp src/DeclareDPIAware.manifest)
 target_link_libraries(old_main ${PROJECT_NAME}_lib)
 add_custom_command(TARGET old_main POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
