Frustrum Culling by points with frustrum shift bug

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -27,6 +27,7 @@ set(GRAPHICS_HEADERS
     include/motor/graphics/Vertex.h
     include/motor/graphics/VertexBuffer.h
     include/motor/graphics/CameraContainer.h
+    include/motor/graphics/FrustumCulling.h
 )
 
 set(SCENES_HEADERS
@@ -81,6 +82,7 @@ set(GRAPHICS_SOURCES
     src/graphics/Texture.cpp
     src/graphics/UpdatedModel.cpp
     src/graphics/CameraContainer.cpp
+    src/graphics/FrustumCulling.cpp
 )
 
 set(KEYBOARD_SOURCES
