--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -7,7 +7,7 @@ set (CMAKE_CXX_STANDARD 23)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_UNICODE)
 
-add_executable (${PROJECT_NAME} WIN32 src/main.cpp src/DeclareDPIAware.manifest)
+add_executable (${PROJECT_NAME} WIN32 src/main.cpp src/DeclareDPIAware.manifest resource.rc)
 target_link_libraries(${PROJECT_NAME} engine)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
