--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,4 @@ set(BUILD_XAUDIO_WIN8 OFF CACHE BOOL "Build for XAudio 2.8")
 add_subdirectory ("lib/DirectXTK")
 add_subdirectory ("lib/freetype")
 add_subdirectory ("lib/LuaJIT-cmake")
+add_subdirectory ("lib/luasocket-cmake")
