--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -22,6 +22,7 @@ set(ECS_HEADERS
     include/motor/ECS/Scene.h
     include/motor/ECS/Factory.h
     include/motor/ECS/CompRealization.h
+    include/motor/ECS/ComponentSystems.h
 )
 
 set(GRAPHICS_HEADERS
@@ -43,6 +44,7 @@ set(GRAPHICS_HEADERS
     include/motor/graphics/VertexBuffer.h
     include/motor/graphics/CameraContainer.h
     include/motor/graphics/DebugDraw.h
+    include/motor/graphics/MeshForComponents.h
 )
 
 set(SCENES_HEADERS
@@ -69,6 +71,7 @@ set(OTHER_HEADERS
     include/motor/other/StringHelper.h
     include/motor/other/Timer.h
     include/motor/other/MathHelper.h
+    include/motor/other/ModelLoader.h
 )
 
 set(STATE_SYSTEM_HEADERS
@@ -103,6 +106,7 @@ set(ECS_SOURCES
     src/ECS/Scene.cpp
     src/ECS/Factory.cpp
     src/ECS/CompRealization.cpp
+    src/ECS/ComponentSystems.cpp
 )
 
 set(GRAPHICS_SOURCES
@@ -119,6 +123,7 @@ set(GRAPHICS_SOURCES
     src/graphics/UpdatedModel.cpp
     src/graphics/CameraContainer.cpp
     src/graphics/DebugDraw.cpp
+    src/graphics/MeshForComponents.cpp
 )
 
 set(KEYBOARD_SOURCES
@@ -139,6 +144,7 @@ set(OTHER_SOURCES
     src/other/StringHelper.cpp
     src/other/Timer.cpp
     src/other/MathHelper.cpp
+    src/other/ModelLoader.cpp
 )
 
 set(STATE_SYSTEM_SOURCES
