--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -7,7 +7,17 @@ set (CMAKE_CXX_STANDARD 23)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_UNICODE)
 
-add_executable (${PROJECT_NAME} WIN32 src/main.cpp src/DeclareDPIAware.manifest resource.rc)
+set (HEADERS
+    include/motor_editor/UI/EditorUI.hpp
+)
+
+set (SOURCES
+)
+
+add_executable (${PROJECT_NAME} WIN32 ${HEADERS} ${SOURCES}
+    src/main.cpp src/DeclareDPIAware.manifest resource.rc)
+
+target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_link_libraries(${PROJECT_NAME} engine socket mime)
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
