Camera component and directional vectors

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -51,6 +51,7 @@ set(GRAPHICS_HEADERS
     include/motor/graphics/CameraContainer.h
     include/motor/graphics/DebugDraw.h
     include/motor/graphics/MeshForComponents.h
+    include/motor/graphics/SceneCamera.h
 )
 
 set(SCENES_HEADERS
@@ -135,6 +136,7 @@ set(GRAPHICS_SOURCES
     src/graphics/CameraContainer.cpp
     src/graphics/DebugDraw.cpp
     src/graphics/MeshForComponents.cpp
+    src/graphics/SceneCamera.cpp
 )
 
 set(KEYBOARD_SOURCES
